--- a/demo-1/src/main/resources/templates/index.html
+++ b/demo-1/src/main/resources/templates/index.html
@@ -8,25 +8,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-  <table class="table table-dark table-striped">
-    <thead>
-      <tr>
-        <th scope="col">Id</th>
-        <th scope="col">Task</th>
-        <th scope="col">Do</th>
-       
-      </tr>
-    </thead>
+<h1>To-Do List</h1>
+  <table class="table table-light table-striped">
     <tbody th:each="task: ${task_list}">
       <tr>
-        <th th:text = "${task.ID}"></th>
+        <td> 
+        <div th:switch="${task.DO }"> 
+		  <p th:case="true"><input class="form-check-input" type="checkbox" id="checkboxNoLabel" value=""  checked></input></p>
+		  <p th:case="false"><input class="form-check-input" type="checkbox" id="checkboxNoLabel" value=""></input></p>
+		  <p th:case="*">User is some other thing</p> 
+		</div>
+        </td>
         <td th:text = "${task.TASK}"></td>
-        <td th:text = "${task.DO}"></td>
-        
+        <td><a href="/edit">Edit</a></td>
+        <td><a th:href="@{/{id}(id=${task.ID})}">Delete</a></td>
       </tr>
-     
     </tbody>
   </table>
-      
+  <form th:action ="@{/}" method="POST">
+    <div class="form-group">
+	 <input type="text" placeholder="New Task" name="nt">   
+	 <button type="submit" class="btn btn-primary">Add</button>
+	</div>
+   </form>
 </body>
 </html>
